[gd_scene load_steps=14 format=3 uid="uid://bvur20x1mukp3"]

[ext_resource type="Script" path="res://entities/enemies/rocks/rock.gd" id="1_2tmrt"]
[ext_resource type="Shader" path="res://entities/enemies/hitflash.gdshader" id="1_5nbd2"]
[ext_resource type="Texture2D" uid="uid://34ijk2gi7xgv" path="res://entities/enemies/rocks/assets/snail.PNG" id="3_aurjo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ll8ep"]
resource_local_to_scene = true
shader = ExtResource("1_5nbd2")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = null

[sub_resource type="AtlasTexture" id="AtlasTexture_ogxod"]
atlas = ExtResource("3_aurjo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_klchb"]
atlas = ExtResource("3_aurjo")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7oubh"]
atlas = ExtResource("3_aurjo")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_jdx7v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogxod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klchb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7oubh")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="Animation" id="Animation_qrclp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}

[sub_resource type="Animation" id="Animation_568ff"]
resource_name = "flash"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_armpr"]
_data = {
"RESET": SubResource("Animation_qrclp"),
"flash": SubResource("Animation_568ff")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t0rdk"]
size = Vector2(17, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_0k27v"]

[node name="Rock" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 4
script = ExtResource("1_2tmrt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 5
visibility_layer = 5
texture_filter = 1
material = SubResource("ShaderMaterial_ll8ep")
sprite_frames = SubResource("SpriteFrames_jdx7v")
autoplay = "default"
frame = 1
frame_progress = 0.72688

[node name="HitFlash" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_armpr")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
texture_filter = 1
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_t0rdk")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
light_mask = 5
visibility_layer = 5
shape = SubResource("CircleShape2D_0k27v")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
